--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-/* .App {
-  /* text-align: center; */
-/* } */
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -23,10 +19,12 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-body{
+
+body {
   background-color: #3e3c32!important;
 }
-.gradient-custom-3 {
+
+.gradient-custom-3, .gradient-custom-4 {
   /* fallback for old browsers */
   background: #8c6044; /* Darker Brown */
 
@@ -48,8 +46,6 @@ body{
   background: linear-gradient(to right, rgba(140, 96, 68, 1), rgba(107, 74, 54, 1));
 }
 
-
-
 .video-background {
   position: fixed;
   top: 0;
@@ -59,164 +55,177 @@ body{
   overflow: hidden;
   z-index: -1;
 }
+
 video {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.navi{
+
+.navi {
   width: 100%;
   height: 65px;
-  background-color: rgba(0, 0, 0, 0.528); /* Adjust the alpha value for transparency */
+  background-color: rgba(0, 0, 0, 0.528); 
   backdrop-filter: blur(10px);
   color: white !important;
   position: fixed;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   z-index: 1;
 }
-.icon{
+
+.icon {
   margin-top: 18px;
   margin-right: 25px;
   font-size: 25px;
   color: white;
 }
-.icon:hover{
+
+.icon:hover {
   cursor: pointer;
 }
+
 h6 {
   margin-left: 75px;
   margin-top: 22px !important;
-  transition: transform 0.3s ease
+  transition: transform 0.3s ease;
 }
 
-h6:hover{
+h6:hover {
   cursor: pointer;
   transform: scale(1.1);
-
 }
-.signa{
+
+.signa {
   color: white;
 }
-.signa:hover{
+
+.signa:hover {
   color: aliceblue;
 }
-.div2{
+
+.div2, .div3, .div4, .div5 {
+  color: #c3c3c3;
+}
+
+.div2 {
   width: 500px;
   height: 100px;
-  /* background-color: blue; */
   margin-top: 150px;
   position: absolute;
   margin-left: -70px;
-  color: #c3c3c3;
+}
 
-  
+.div3 {
+  position: absolute;
+  margin-top: 280px;
+  margin-left: -170px;
 }
-.div3{
-position: absolute;
-margin-top:280px ;
-margin-left:-170px ;
-color: #c3c3c3;
-}
-.div4{
+
+.div4 {
   position: absolute;
   margin-top: 400px;
-  color: #c3c3c3;
 }
-.div5{
+
+.div5 {
   color: transparent; 
-  -webkit-text-stroke: 2.5px #c3c3c3; 
-  text-stroke: 2px black; 
+  -webkit-text-stroke: 2.5px #c3c3c3;  
   margin-top: 530px;
   position: absolute;
   margin-left: -90px;
-
 }
-h1{
+
+h1 {
   font-size: 125px !important;
   margin-left: 420px;
-  
 }
-.butt{
+
+.butt {
   display: inline-block;
   padding: 10px 35px;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  /* Change the background color to your desired color */
   border-radius: 25px;
-  transition: background-color 0.3s ease;color: #282c34;
+  transition: background-color 0.3s ease;
+  color: #282c34;
   background-color: #c3c3c3;
   margin-top: 360px;
   margin-left: 1150px;
   border-style: none;
 }
-.butt:hover{
+
+.butt:hover {
   background-color: #282c34;
-  color:#c3c3c3;
+  color: #c3c3c3;
 }
 
-.cardsto{
+.cardsto {
   background-color: rgba(255, 255, 255, 0.734) !important; /* Semi-transparent background color */
   backdrop-filter: blur(10px);
 }
 
-.butt i{
+.butt i {
   margin-left: 15px;
 }
-.px-5{
+
+.px-5 {
   width: 450px;
   height: 560px;
 }
-.divhome{
-  width:100%;
+
+.divhome {
+  width: 100%;
   height: 1230px;
-  background-color:#3e3c32;
+  background-color: #3e3c32;
   margin-top: -68px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding-top: 80px;
-  
 }
 
-.px-54{
+.px-54 {
   width: 450px;
   height: 350px;
-
 }
-.card1{
-  width:300px;
+
+.card1 {
+  width: 300px;
   height: 510px !important;
   margin-top: 10px;
   background-color: #ececec !important;
   transition: transform 1.5s ease;
 }
-.card1:hover{
+
+.card1:hover {
   transform: scale(1.1);
 }
-.explo{
+
+.explo {
   color: white !important;
   background-color: #85634c !important;
-  transition:background-color 0.3s ease !important;
+  transition: background-color 0.3s ease !important;
 }
-.explo:hover{
-  background-color: #2B1D0E !important;
+
+.explo:hover {
+  background-color: #2b1d0e !important;
 }
+
 .nav2 {
   position: fixed;
   margin-top: 65px;
   z-index: 1;
-  width:100% ;
+  width: 100%;
   height: 50px;
   background-color: #c3c3c3;
   color: #ececec;
   display: flex;
-  justify-content: center;
   justify-content: space-evenly;
   margin-bottom: 100px;
 }
+
 .navbutt {
   border: none;
   background-color: #c3c3c3;
@@ -231,19 +240,15 @@ h1{
   transform: scale(1.1);
   background-color: #3e3c32;
   color: white;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 15px;
 }
 
-
-.demmy{
-  /* height: 1px; */
+.demmy {
   margin-bottom: 150px;
-  /* width: 100%; */
-  background-color:#85634c;
-  /* backdrop-filter: blur(10px); */
-  
+  background-color: #85634c;
 }
-.storediv{
+
+.storediv {
   position: absolute;
   width: 100%;
   background-image: url(https://c4.wallpaperflare.com/wallpaper/124/342/449/beautifull-design-interio-wallpaper-preview.jpg);
@@ -251,104 +256,11 @@ h1{
   background-position: center; 
   background-attachment: fixed; 
 }
+
 @media screen and (max-width: 767px) {
-  input{
-    display: none;
-  }
-  .storediv{
-   width: 755px;
-  }
-  .justify-content-center{
-    width: 720px;
-  }
-  .bg-image{
-    width: 755px !important; 
-    height: 889px !important;
-  }
-  .enjodiv{
-    margin-top: 50px;
-  }
-  .m-5{
-    height: 520px !important;
-  }
-  .navi{
-    margin-top: -50px;
-  }
-  .h-custom{
-    width: 745px;
-    margin-left: 35px;
-  }
-  .mt-5{
-    width: 660px;
-
-  }
-  .demmy{
-    width: 755px;
-  }
-  .butt{
-    width: 100px;
-    margin-left: 300px;
-    margin-top: 750px;
-    width:300px;
-  }
-  .enjodiv{
-   margin-right:-100px;
-  }
-  .divhome{
-    margin-top: 150px;
-    width: 755px;
-    height: 100%;
-    padding-bottom: 25px;
-  }
-  .footer {
-    width:755px;
-  }
-  .mdb{
-    display: none;
-  }
-.enjodiv{
-  margin-left: -180px !important;
-}
-.svg{
-  width:755px;
-  margin-bottom:-155px;
-}
-.card1{
-  margin-bottom: 35px;
-}
-.footer{
-  text-align: left;
-}
-.signup{
-  margin-left: -120px !important;
+  /* Your mobile-specific styles here */
 }
 
-.navbutt{
-  font-size: 10px;
-  width: 60px;
-}
-.cardsto{
-  width: 200px !important;
-}
-
-.logo{
-  margin-right: -1px !important;
-}
-.homtexts{
-  margin-left: 50px;
-}
-.imgsto{
-  width: 100px !important;
-}
-.nav2{
-  margin-top: 30px;
-  width: 755px; 
-}
-
-
-}
 .footer {
-  color :white;
-
+  color: white;
 }
-
