--- a/src/DummyProducts/Addto.css
+++ b/src/DummyProducts/Addto.css
@@ -4,7 +4,7 @@
     }
     }
     body{
-        background-color: #f8f9fa  !important;
+        background-color: #ffffff !important;
     }
 
     .gradient-custom {
@@ -14,7 +14,7 @@
         .card-custom {
         border-bottom-left-radius: 10% 50%;
         border-top-left-radius: 10% 50%;
-        background-color: #f8f9fa ;
+        background-color: #ffffff ;
         }
         
         
@@ -38,4 +38,9 @@
             width: 100%;
             height: 800px;
             margin-top: -40px;
+        }
+        @media screen and (max-width: 767px) {
+            .delidiv{
+                margin-left: 55px;
+            }
         }
